--- a/index/templates/index/browse_results.html
+++ b/index/templates/index/browse_results.html
@@ -5,29 +5,44 @@ browse
 {% endblock %}
 
 {% block results %}
-<nav aria-label="breadcrumb" role="navigation">
-  <ol class="breadcrumb">
-    {% for crumb in breadcrumbs %}
-    <li class="breadcrumb-item active"><a href="#">{{ crumb }}</a></li>
-    {% endfor %}
-  </ol>
-</nav>
-{% if podcasts %}
-<div class="col" id="browse-results">
+<div class="col">
+  {% if podcasts %}
   <div class="row">
-    <div class="col">
-      {% for podcast in podcasts %}
+    <nav aria-label="...">
+      <ul class="pagination">
+        <li class="page-item disabled">
+          <a class="page-link" href="#" tabindex="-1">Previous</a>
+        </li>
+        {% for page in page_range %}
+        <li class="page-item"><a class="page-link" href="#">{{ page }}</a></li>
+        {% endfor %}
+        <!-- <li class="page-item active">
+          <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
+        </li> -->
+        <li class="page-item">
+          <a class="page-link" href="#">Next</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  <div class="row">
+    <div class="col" id="browse-results">
       <div class="row">
-        <a class="col show-podinfo" id="{{ podcast.itunesid }}" href=
-         "{% url 'podinfo' itunesid=podcast.itunesid %}">
-          <h6>{{ podcast.title }}</h6>
-        </a>
+        <div class="col">
+          {% for podcast in podcasts %}
+          <div class="row">
+            <a class="col show-podinfo" id="{{ podcast.itunesid }}" href=
+            "{% url 'podinfo' itunesid=podcast.itunesid %}">
+            <h6>{{ podcast.title }}</h6>
+            </a>
+          </div>
+          {% endfor %}
+        </div>
       </div>
-      {% endfor %}
     </div>
   </div>
+  {% else %}
+  <p>No results :p</p>
+  {% endif %}
 </div>
-{% else %}
-<p>No results :p</p>
-{% endif %}
 {% endblock %}
