--- a/index/static/style.css
+++ b/index/static/style.css
@@ -37,11 +37,11 @@ body {
 }
 
 #search-form {
+}
+
+#q {
   max-width: 60%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin: 30px 0px 30px 50px;
 }
 
 #main {
@@ -117,7 +117,6 @@ body {
 
 .btn.filter-button {
   text-align: left;
-  font-size: 0.7rem;
   white-space: normal;
 }
 
