--- a/index/templates/index/settings.html
+++ b/index/templates/index/settings.html
@@ -6,18 +6,16 @@ settings
 
 {% block content %}
 <!-- BUMPER -->
-
 <div class="row" id="bumper">
   <div class="col">
-
   </div>
 </div>
-
 <!-- SETTINGS -->
-
 <div class="row">
   <div class="col">
-    <h5>My Profile</h5>
+    <h5>
+      My Profile
+    </h5>
   </div>
 </div>
 <div class="row">
@@ -26,13 +24,18 @@ settings
       {% csrf_token %}
       {{ user_form.as_p }}
       {{ profile_form.as_p }}
-      <button class="btn btn-primary" type="submit">Save changes</button>
+      <button class="btn btn-primary" type="submit">
+        Save changes
+      </button>
     </form>
   </div>
 </div>
 <div class="row">
   <div class="col">
-    <a class="password-link" href="{% url 'account_reset_password' %}" data-toggle="modal" data-target="#modal">Reset Password</a>
+    <a class="password-link" href="{% url 'account_reset_password' %}"
+    data-toggle="modal" data-target="#modal">
+      Reset Password
+    </a>
   </div>
 </div>
 {% endblock %}
