--- a/index/templates/index/subscriptions_results.html
+++ b/index/templates/index/subscriptions_results.html
@@ -1,16 +1,22 @@
 <div class="col">
   {% if subscriptions %}
-  {% for subscription in subscriptions %}
-  <div class="row">
-    <a class="col result-image show-podinfo sub-box" id="{{ subscription.itunesid }}" href=
-     "{% url 'podinfo' itunesid=subscription.itunesid %}">
-      <h6>{{ subscription.pod.title }}</h6>
-      <p>{{ subscription.last_updated }}</p>
-    </a>
-  </div>
-  {% endfor %}
+    {% for subscription in subscriptions %}
+      <div class="row">
+        <a class="col result-image show-podinfo sub-box"
+        id="{{ subscription.itunesid }}" href=
+         "{% url 'podinfo' itunesid=subscription.itunesid %}">
+          <h6>
+            {{ subscription.pod.title }}
+          </h6>
+          <p>
+            {{ subscription.last_updated }}
+          </p>
+        </a>
+      </div>
+    {% endfor %}
   {% else %}
-  <div class="row" id="overlay">
-  </div>
+    <p>
+      No results :p
+    </p>
   {% endif %}
 </div>
