--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -1,39 +1,51 @@
 <ul class="navbar-nav">
   <li class="nav-item">
-    <a class="navbar-brand home mx-auto" href="{% url 'home' %}">dopepod</a>
+    <a class="navbar-brand home mx-auto" href="{% url 'home' %}">
+      dopepod
+    </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">blog</a>
+    <a class="nav-link" href="#">
+      blog
+    </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link browse" href="{% url 'browse' %}">browse</a>
+    <a class="nav-link browse" href="{% url 'browse' %}">
+      browse
+    </a>
   </li>
   {% if user.is_authenticated %}
-  <li class="nav-item">
-    <a class="nav-link settings" href="{% url 'settings' %}">settings</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link subscriptions" href="{% url 'subscriptions' %}">subscriptions</a>
-  </li>
+    <li class="nav-item">
+      <a class="nav-link settings" href="{% url 'settings' %}">
+        settings
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link subscriptions" href="{% url 'subscriptions' %}">
+        subscriptions
+      </a>
+    </li>
   {% endif %}
 </ul>
 <ul class="navbar-nav ml-auto">
   {% if user.is_authenticated %}
-  <li>
-    <a class="btn btn-primary ajax-logout" href="{% url 'account_logout' %}">
-      Logout
-    </a>
-  </li>
+    <li>
+      <a class="btn btn-primary ajax-logout" href="{% url 'account_logout' %}">
+        Logout
+      </a>
+    </li>
   {% else %}
-  <li>
-    <a class="btn btn-primary ajax-register" href="{% url 'account_signup' %}" data-toggle="modal" data-target="#modal">
-      Register
-    </a>
-  </li>
-  <li>
-    <a class="btn btn-primary ajax-login" href="{% url 'account_login' %}" data-toggle="modal" data-target="#modal">
-      Login
-    </a>
-  </li>
+    <li>
+      <a class="btn btn-primary ajax-register" href="{% url 'account_signup' %}"
+      data-toggle="modal" data-target="#modal">
+        Register
+      </a>
+    </li>
+    <li>
+      <a class="btn btn-primary ajax-login" href="{% url 'account_login' %}"
+      data-toggle="modal" data-target="#modal">
+        Login
+      </a>
+    </li>
   {% endif %}
 </ul>
