--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -2,7 +2,9 @@
   <div class="col">
     <div class="row">
       <div class="col">
-        <h6>{{ track.title }}</h6>
+        <h6>
+          {{ track.title }}
+        </h6>
       </div>
     </div>
     <div class="row">
