--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -18,29 +18,50 @@
         <img src="{{ podcast.artworkUrl }}170x170bb.jpg" />
       </div>
       <div class="col-sm-6">
-        <h3>{{ podcast.title }}</h3>
-        <p>{{ podcast.description }}</p>
+        <h3>
+          {{ podcast.title }}
+        </h3>
+        <p>
+          {{ podcast.description }}<
+          /p>
       </div>
       <div class="col-sm-3">
         {% if podcast.subscribed %}
-        <form class="sub-form" action="{% url 'subscribe' %}" id="{{ podcast.itunesid }}" method="POST">
-          {% csrf_token %}
-          <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
-          <input type="submit" class="btn btn-dark" id="sub-button" value="Unsubscribe">
-        </form>
+          <form class="sub-form" action="{% url 'subscribe' %}"
+          id="{{ podcast.itunesid }}" method="POST">
+            {% csrf_token %}
+            <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
+            <input type="submit" class="btn btn-dark" id="sub-button"
+            value="Unsubscribe">
+          </form>
         {% else %}
-        <form class="sub-form" action="{% url 'subscribe' %}" id="{{ podcast.itunesid }}" method="POST">
-          {% csrf_token %}
-          <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
-          <input type="submit" class="btn btn-dark" id="sub-button" value="Subscribe">
-        </form>
+          <form class="sub-form" action="{% url 'subscribe' %}"
+          id="{{ podcast.itunesid }}" method="POST">
+            {% csrf_token %}
+            <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
+            <input type="submit" class="btn btn-dark" id="sub-button"
+            value="Subscribe">
+          </form>
         {% endif %}
-        <p>{% if podcast.genre.supa %}{{ podcast.genre.supa }} - {% endif %}{{ podcast.genre }}</p>
-        <p>{{ podcast.language }}</p>
+        <p>
+          {% if podcast.genre.supa %}
+            {{ podcast.genre.supa }} -
+          {% endif %}
+          {{ podcast.genre }}
+        </p>
+        <p>
+          {{ podcast.language }}
+        </p>
         {% if podcast.explicit %}
-          <p>Explicit</p>
+          <p>
+            Explicit
+          </p>
         {% endif %}
-        <p><em>{{ podcast.copyrighttext }}</em></p>
+        <p>
+          <em>
+            {{ podcast.copyrighttext }}
+          </em>
+        </p>
       </div>
     </div>
   </div>
