--- a/podcasts/templates/tracks.html
+++ b/podcasts/templates/tracks.html
@@ -1,28 +1,36 @@
 <div class="col">
   {% if tracks %}
-  <table class="table table-bordered table-hover">
-    <tbody>
-    {% for track in tracks %}
-      <tr data-toggle="tooltip" title="{{ track.summary }}">
-        <td>{{ track.title }}</td>
-        <td>{{ track.pubDate }}</td>
-        <td>
-          <a class="btn btn-primary play" id="{{ track.url }}" name="{{ track.type }}" href="{% url 'play' url=track.url %}" target="_blank">
-            Play
-            <!-- ADDTL TRACK INFO HERE -->
-            <span class="hidden" id="{{ track.title }}" name="{{ podcast.title }}">
-            </span>
-          </a>
-        </td>
-        <td>
-          <a class="btn btn-primary" href="{{ track.url }}">Download</a>
-        </td>
-      </tr>
-    {% endfor %}
-    </tbody>
-  </table>
+    <table class="table table-bordered table-hover">
+      <tbody>
+      {% for track in tracks %}
+        <tr data-toggle="tooltip" title="{{ track.summary }}">
+          <td>
+            {{ track.title }}
+          </td>
+          <td>
+            {{ track.pubDate }}
+          </td>
+          <td>
+            <a class="btn btn-primary play" id="{{ track.url }}"
+            name="{{ track.type }}" href="{% url 'play' url=track.url %}"
+            target="_blank">
+              Play
+              <!-- ADDTL TRACK INFO HERE -->
+              <span class="hidden" id="{{ track.title }}" name="{{ podcast.title }}">
+              </span>
+            </a>
+          </td>
+          <td>
+            <a class="btn btn-primary" href="{{ track.url }}">
+              Download
+            </a>
+          </td>
+        </tr>
+      {% endfor %}
+      </tbody>
+    </table>
   {% else %}
-  <div class="row" id="overlay">
-  </div>
+    <div class="row" id="overlay">
+    </div>
   {% endif %}
 </div>
