--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -29,13 +29,9 @@
       </div>
     </nav>
     <!-- CONTENT -->
-    <div class="container">
-      <div class="row" id="canvas">
-        <div class="col" id="site-content">
-          {% block content %}
-          {% endblock %}
-        </div>
-      </div>
+    <div id="site-content">
+      {% block content %}
+      {% endblock %}
     </div>
     <!--MODAL-->
     <div class="modal fade" id="modal" tabindex="-1" role="dialog"
