--- a/index/templates/index/search_results.html
+++ b/index/templates/index/search_results.html
@@ -6,35 +6,34 @@
 
 {% block results %}
 {% if podcasts %}
-<div class="col" id="search-results">
-  <div class="row texture">
-    {% for podcast in podcasts %}
-      <a class="col-lg-2 col-md-3 col-sm-4 result-image show-podinfo" id="{{ podcast.itunesid }}" href=
-       "{% url 'podinfo' itunesid=podcast.itunesid %}">
-        <img src="{{ podcast.artworkUrl }}150x150bb.jpg" />
-        <div class="row">
-          <div class="col">
-            <div class="row result-title">
-              <div class="col">
-                <h6>{{ podcast.title }}</h6>
-              </div>
-            </div>
-            <div class="row result-genre">
-              <div class="col">
-                <p>
-                  {% if podcast.genre.supa %}
-                    {{ podcast.genre.supa }} -
-                  {% endif %}
-                  {{ podcast.genre }}
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </a>
-    {% endfor %}
-  </div>
-</div>
+  {% for podcast in podcasts %}
+    <a class="col-lg-2 col-md-3 col-sm-4 col-6 result-wrapper show-podinfo" id="{{ podcast.itunesid }}" href=
+     "{% url 'podinfo' itunesid=podcast.itunesid %}">
+     <div class="result-box">
+       <div class="row">
+         <div class="col result-image">
+           <img src="{{ podcast.artworkUrl }}180x180bb.jpg" />
+         </div>
+       </div>
+       <div class="row">
+         <div class="col result-title">
+           <h6>{{ podcast.title }}</h6>
+         </div>
+       </div>
+       <div class="row">
+         <div class="col result-genre">
+           <p>
+             {% if podcast.genre.supa %}
+             {{ podcast.genre.supa }} -
+             {% endif %}
+             {{ podcast.genre }}
+           </p>
+         </div>
+       </div>
+
+     </div>
+    </a>
+  {% endfor %}
 {% else %}
   <p>
     No results :p
