--- a/index/templates/multibar.html
+++ b/index/templates/multibar.html
@@ -1,17 +1,9 @@
-{% extends request.is_ajax|yesno:'ajax.html,index/header.html' %}
-
-{% block title %}
-search
-{% endblock %}
-
-{% block content %}
-<!-- MULTI BAR -->
 <div class="container" id="multi-bar">
   <form id="search-form" method="GET" action="{% url 'search' %}">
     <!-- SEARCH BAR -->
     <div class="row" id="search-bar">
-      <div class="col-auto texture">
-        <div class="input-group" id="search-field">
+      <div class="col texture">
+        <div class="input-group">
           {% if selected_q %}
             <input class="form-control" type="text" name="q" id="q"
             type="search" placeholder="Search for..."
@@ -30,55 +22,46 @@ search
           </span>
         </div>
       </div>
-      <div class="col texture">
-      </div>
     </div>
     <!-- OPTIONS -->
-    <div class="row" id="options-bar">
-      <div class="col texture">
-
-      </div>
-      <div class="col-auto texture" id="options">
+    <div class="row" id="options">
+      <div class="col">
         <!-- GENRES -->
-        <ul id="options-list">
-          <li>
-            <div class="btn-group">
-              <button type="button" class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Genre
-              </button>
-              <div class="dropdown-menu">
-                <div class="btn-group-vertical btn-group-sm filter-buttons" id="search-genre-buttons" data-toggle="buttons">
-                  {% if selected_genre == 'All' or selected_genre == None %}
+        <div class="btn-group ml-auto">
+          <button type="button" class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Genre
+          </button>
+          <div class="dropdown-menu">
+            <div class="btn-group-vertical btn-group-sm filter-buttons" id="search-genre-buttons" data-toggle="buttons">
+              {% if selected_genre == 'All' or selected_genre == None %}
+                <label class="btn btn-outline-primary filter-button active">
+                  <input type="radio" name="genre" id="All" value="All" checked>
+                  All
+                </label>
+              {% else %}
+                <label class="btn btn-outline-primary filter-button">
+                  <input type="radio" name="genre" id="All" value="All">
+                  All
+                </label>
+              {% endif %}
+              {% for genre in genres %}
+                {% if genre.name == selected_genre %}
                   <label class="btn btn-outline-primary filter-button active">
-                    <input type="radio" name="search-genre" id="All" value="All" checked>
-                    All
-                  </label>
-                  {% else %}
-                  <label class="btn btn-outline-primary filter-button">
-                    <input type="radio" name="search-genre" id="All" value="All">
-                    All
-                  </label>
-                  {% endif %}
-                  {% for genre in genres %}
-                  {% if genre.name == selected_genre %}
-                  <label class="btn btn-outline-primary filter-button active">
-                    <input type="radio" name="search-genre" id="{{ genre.name }}" value="{{ genre.name }}" checked>
+                    <input type="radio" name="genre" id="{{ genre.name }}" value="{{ genre.name }}" checked>
                     {{ genre.name }}
                   </label>
-                  {% else %}
+                {% else %}
                   <label class="btn btn-outline-primary filter-button">
-                    <input type="radio" name="search-genre" id="{{ genre.name }}" value="{{ genre.name }}">
+                    <input type="radio" name="genre" id="{{ genre.name }}" value="{{ genre.name }}">
                     {{ genre.name }}
                   </label>
-                  {% endif %}
-                  {% endfor %}
-                </div>
-              </div>
+                {% endif %}
+              {% endfor %}
             </div>
-          </li>
-          <!-- LANGUAGES -->
-          <li>
-            <div class="btn-group">
+          </div>
+        </div>
+        <!-- LANGUAGES -->
+        <div class="btn-group">
           <button type="button" class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Language
           </button>
@@ -86,25 +69,25 @@ search
             <div class="btn-group-vertical btn-group filter-buttons" id="search-language-buttons" data-toggle="buttons">
               {% if selected_language == 'All' or selected_language == None %}
                 <label class="btn btn-outline-primary filter-button active">
-                  <input type="radio" name="search-language" id="All" value="All" checked>
+                  <input type="radio" name="language" id="All" value="All" checked>
                   All
                 </label>
               {% else %}
                 <label class="btn btn-outline-primary filter-button">
-                  <input type="radio" name="search-language" id="All" value="All">
+                  <input type="radio" name="language" id="All" value="All">
                   All
                 </label>
               {% endif %}
               {% for language in languages %}
                 {% if language.name == selected_language %}
                   <label class="btn btn-outline-primary filter-button active">
-                    <input type="radio" name="search-language" id="{{ language.name }}"
+                    <input type="radio" name="language" id="{{ language.name }}"
                     value="{{ language.name }}" checked>
                     {{ language.name }}
                   </label>
                 {% else %}
                   <label class="btn btn-outline-primary filter-button">
-                    <input type="radio" name="search-language" id="{{ language.name }}"
+                    <input type="radio" name="language" id="{{ language.name }}"
                     value="{{ language.name }}">
                     {{ language.name }}
                   </label>
@@ -113,10 +96,8 @@ search
             </div>
           </div>
         </div>
-          </li>
-          <!-- SHOW -->
-          <li>
-            <div class="btn-group">
+        <!-- SHOW -->
+        <div class="btn-group">
           <button type="button" class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             25
           </button>
@@ -125,13 +106,13 @@ search
               {% for num in show %}
                 {% if selected_show == num %}
                   <label class="btn btn-outline-primary show-button active">
-                    <input type="radio" name="search-show" id="{{ num }}"
+                    <input type="radio" name="show" id="{{ num }}"
                     value="{{ num }}" checked>
                     {{ num }}
                   </label>
                 {% else %}
                   <label class="btn btn-outline-primary show-button">
-                    <input type="radio" name="search-show" id="{{ num }}"
+                    <input type="radio" name="show" id="{{ num }}"
                     value="{{ num }}">
                     {{ num }}
                   </label>
@@ -140,42 +121,21 @@ search
             </div>
           </div>
         </div>
-          </li>
-          <!-- EXPLICIT -->
-          <li>
-            <div class="btn-group" id="search-explicit-buttons" data-toggle="buttons">
+        <!-- EXPLICIT -->
+        <div class="btn-group" id="search-explicit-buttons" data-toggle="buttons">
           {% if selected_explicit == True or selected_explicit == None %}
             <label class="btn btn-outline-primary filter-button">
-              <input type="checkbox" name="search-explicit" value="false">
+              <input type="checkbox" name="explicit" value="false">
               Hide Explicit
             </label>
             {% else %}
             <label class="btn btn-outline-primary filter-button active">
-              <input type="checkbox" name="search-explicit" value="false" checked>
+              <input type="checkbox" name="explicit" value="false" checked>
               Hide Explicit
             </label>
           {% endif %}
         </div>
-          </li>
-        </ul>
       </div>
     </div>
   </form>
 </div>
-
-<div class="container">
-  <div class="row" id="main">
-    <!-- MAIN -->
-    <div class="col">
-      <!-- RESULTS -->
-      <div class="row" id="results">
-        {% block results %}
-        {% endblock %}
-      </div>
-      <!-- RECOMMENDATIONS -->
-      <div class="row" id="recommendations">
-      </div>
-    </div>
-  </div>
-</div>
-{% endblock %}
