--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -1,6 +1,6 @@
 <ul class="navbar-nav">
   <li class="nav-item">
-    <a class="navbar-brand home mx-auto" href="{% url 'home' %}">
+    <a class="navbar-brand home-link" href="{% url 'home' %}">
       dopepod
     </a>
   </li>
@@ -10,18 +10,18 @@
     </a>
   </li>
   <li class="nav-item">
-    <a class="nav-link browse" href="{% url 'browse' %}">
+    <a class="nav-link browse-link" href="{% url 'browse' %}">
       browse
     </a>
   </li>
   {% if user.is_authenticated %}
     <li class="nav-item">
-      <a class="nav-link settings" href="{% url 'settings' %}">
+      <a class="nav-link settings-link" href="{% url 'settings' %}">
         settings
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link subscriptions" href="{% url 'subscriptions' %}">
+      <a class="nav-link subscriptions-link" href="{% url 'subscriptions' %}">
         subscriptions
       </a>
     </li>
