--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -5,70 +5,69 @@
 {% endblock %}
 
 {% block content %}
-<!-- BUMPER -->
-<div class="row" id="bumper">
-  <div class="col">
-  </div>
-</div>
 <!-- PODINFO BAR -->
-<div class="row">
-  <div class="col podinfo" id="podinfo">
-    <div class="row texture">
-      <div class="col-sm-3">
-        <img src="{{ podcast.artworkUrl }}170x170bb.jpg" />
-      </div>
-      <div class="col-sm-6">
-        <h3>
-          {{ podcast.title }}
-        </h3>
-        <p>
-          {{ podcast.description }}<
-          /p>
-      </div>
-      <div class="col-sm-3">
-        {% if podcast.subscribed %}
-          <form class="sub-form" action="{% url 'subscribe' %}"
-          id="{{ podcast.itunesid }}" method="POST">
-            {% csrf_token %}
-            <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
-            <input type="submit" class="btn btn-dark" id="sub-button"
-            value="Unsubscribe">
-          </form>
-        {% else %}
-          <form class="sub-form" action="{% url 'subscribe' %}"
-          id="{{ podcast.itunesid }}" method="POST">
-            {% csrf_token %}
-            <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
-            <input type="submit" class="btn btn-dark" id="sub-button"
-            value="Subscribe">
-          </form>
-        {% endif %}
-        <p>
-          {% if podcast.genre.supa %}
-            {{ podcast.genre.supa }} -
-          {% endif %}
-          {{ podcast.genre }}
-        </p>
-        <p>
-          {{ podcast.language }}
-        </p>
-        {% if podcast.explicit %}
+<div class="container" id="podinfo-bar">
+  <div class="row" id="podinfo">
+    <div class="col texture">
+      <div class="row">
+        <div class="col-sm-3">
+          <img src="{{ podcast.artworkUrl }}170x170bb.jpg" />
+        </div>
+        <div class="col-sm-6">
+          <h3>
+            {{ podcast.title }}
+          </h3>
           <p>
-            Explicit
+            {{ podcast.description }}<
+            /p>
+        </div>
+        <div class="col-sm-3">
+          {% if podcast.subscribed %}
+            <form class="sub-form" action="{% url 'subscribe' %}"
+            id="{{ podcast.itunesid }}" method="POST">
+              {% csrf_token %}
+              <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
+              <input type="submit" class="btn btn-dark" id="sub-button"
+              value="Unsubscribe">
+            </form>
+          {% else %}
+            <form class="sub-form" action="{% url 'subscribe' %}"
+            id="{{ podcast.itunesid }}" method="POST">
+              {% csrf_token %}
+              <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
+              <input type="submit" class="btn btn-dark" id="sub-button"
+              value="Subscribe">
+            </form>
+          {% endif %}
+          <p>
+            {% if podcast.genre.supa %}
+              {{ podcast.genre.supa }} -
+            {% endif %}
+            {{ podcast.genre }}
           </p>
-        {% endif %}
-        <p>
-          <em>
-            {{ podcast.copyrighttext }}
-          </em>
-        </p>
+          <p>
+            {{ podcast.language }}
+          </p>
+          {% if podcast.explicit %}
+            <p>
+              Explicit
+            </p>
+          {% endif %}
+          <p>
+            <em>
+              {{ podcast.copyrighttext }}
+            </em>
+          </p>
+        </div>
       </div>
     </div>
   </div>
 </div>
 <!-- TRACKS -->
-<div class="row tracks" id="tracks">
-  {% include 'tracks.html' %}
+<div class="container">
+  <div class="row" id="tracks">
+    {% include 'tracks.html' %}
+  </div>
 </div>
 {% endblock %}
 
